2005-06-09  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* parser.y: Search through `include_dirs' paths for file to include.
	* monoburg.h,
	* monoburg.c: Add a `-I' option to precise include directories.

2005-06-09  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* parser.y: Add `#line' directives output on `%include', CODE and
	in `yyparsetail'.
	* monoburg.c: Add `#line' directives output just before the call to
	`yyparse'.

2005-06-04  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* config.h.in: New.
	* configure.ac: Output PACKAGE infos in config.h.
	* monoburg.c: Add `-v' and `--version' options.
	* Makefile.am: Fix distribution and cleaning rules.
	* monoburg.h: Include `config.h'.

2005-06-04  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* parser.y:  Add  a  `%include'  directive  which  includes  files
	verbatim. Syntax is:
	%include filename
	without double quote or anything.
	
	This directive could be used anywhere.
	
	* parser.y (yyerror):   Enhance    verbosity   on   error  message
	accordingly.

	* monoburg.h: Add the info about included file storage.
	* monoburg.c: Update accordingly use of `inputfd'.

2005-06-04  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* parser.y: Add  a  `%namespace' directive   which makes  monoburg
	output  functions in  a  namespace. This  directive could  produce
	nested namespaces. Syntax is:
	%namespace namespace1_name
	%namespace namespace2_name
	without double quote or anything.
	
	This directive  can only be  used in the  `rule' part of  the burg
	file.

	The user is warned that  the code produced will only be compilable
	with a C++ compiler.
	
	* parser.y (yylex):  Remove  a warning  when comparing  a `sizeof'
	with an int.
	
	* monoburg.c,
	* monoburg.h: Add `%namespace' handling.

2005-06-04  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* monoburg.c:  Add   a  `--with-references'   option  which  makes
	monoburg to  produce `mono_burg_emit_*' functions  that takes tree