@@ -1,5 +1,9 @@
 2005-06-09  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>
 
+	* parser.y: Do not output "#line" directives when reading rules.
+
+2005-06-09  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>
+
 	* parser.y: Search through `include_dirs' paths for file to include.
 	* monoburg.h,
 	* monoburg.c: Add a `-I' option to precise include directories.
